kubernetes/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: bus-app
  namespace: bus
spec:
  replicas: 3
  selector:
    matchLabels:
      app: bus-app
  template:
    metadata:
      labels:
        app: bus-app
    spec:
      containers:
        - name: bus-app
          image: mhabeel/group4:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080

      imagePullSecrets:
        - name: dockerhub-secret
