kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bus-app-service
spec:
  selector:
    app.kubernetes.io/name: bus-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
